Table content alignment and buttons fix

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,13 +1,8 @@
 #users-index-section{
   #users-new-btn {
-  	a:hover, a:visited, a:link, a:active{ color: #FFF; }
-    width: 33%; 
-    margin-bottom: 5%;
+  	a:hover, a:visited, a:link, a:active{ color: #FFF; } 
   }
-
-  tr { 
-  	text-align: left; 
-	}  
+  tr { text-align: left; }  
 }
 
 .center {
